Add run unit tests to "make run", remove unused warnings and add "make" package to Alpine

--- a/production/docker/alpine/Dockerfile
+++ b/production/docker/alpine/Dockerfile
@@ -3,14 +3,15 @@ FROM rust:alpine
 WORKDIR /vrs
 
 RUN apk update
+RUN apk add make
 COPY . .
 RUN cargo clean
 RUN rm -rf {production,setup.sh}
 RUN mkdir -p /var/www/static/ && mkdir /var/www/logs/
 RUN cp ./media/* /var/www/static/
 RUN rm -rf ./media/
-RUN cargo build --release
+RUN make build
 
-CMD ["cargo", "run", "--release"]
+CMD ["make", "run"]
 
 EXPOSE 80/tcp
