--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Lint
       run: cargo clippy --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: ./setup.sh && cargo test --verbose
