Remove setup script execution
Because it doesn't fix the errors on the tests.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Lint
       run: cargo clippy --verbose
     - name: Run tests
-      run: ./setup.sh && cargo test --verbose
+      run: cargo test --verbose
