Replace setup.sh with makefile rule

--- a/production/docker/alpine/Dockerfile
+++ b/production/docker/alpine/Dockerfile
@@ -6,12 +6,11 @@ RUN apk update
 RUN apk add make
 COPY . .
 RUN cargo clean
-RUN rm -rf {production,setup.sh}
-RUN mkdir -p /var/www/static/ && mkdir /var/www/logs/
-RUN cp ./media/* /var/www/static/
-RUN rm -rf ./media/
-RUN make build
+RUN rm -rf {production,docs}
+RUN make migrate
+RUN rm -rf ./media
+RUN cargo build --release
 
-CMD ["make", "run"]
+CMD ["cargo", "run", "--release"]
 
 EXPOSE 80/tcp
