--- a/production/docker/debian/Dockerfile
+++ b/production/docker/debian/Dockerfile
@@ -5,12 +5,11 @@ WORKDIR /vrs
 RUN apt update -y && apt upgrade -y
 COPY . .
 RUN cargo clean
-RUN rm -rf {production,setup.sh}
-RUN mkdir -p /var/www/static/ && mkdir /var/www/logs/
-RUN cp ./media/* /var/www/static/
+RUN rm -rf {production,docs}
+RUN make migrate
 RUN rm -rf ./media/
-RUN make build
+RUN cargo build --release
 
-CMD ["make", "run"]
+CMD ["cargo", "run", "--release"]
 
 EXPOSE 80/tcp
